<resources>
    <string name="your_web_client_id">192231283254-o5m57s8662kg8gvst99bs1rst6v4uqgu.apps.googleusercontent.com</string>
    <string name="app_name">Gymaster</string>
    <string name="hintPassword">Introduce la contraseña</string>
    <string name="hintPassword2">Repite la contraseña</string>
    <string name="hintEmail">Introduce el correo</string>
    <string name="eBIniciarsesion">Iniciar sesión</string>
    <string name="eBIniciarsesiongoogle">Iniciar sesión con Google</string>
    <string name="eBRegistrar"><u>Regístrate</u></string>
    <string name="textoRegistro">Si aún no tienes cuenta:         </string>
    <string name="registroUsuario">Registrar usuario</string>
    <string name="select">Elegir ejercicio</string>
    <string name="ejerRecycler">No existen ejercicios registrados</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="btnConsultar">Consultar</string>
    <string name="btnAñadir">Añadir</string>
    <string name="btnModificar">Modificar</string>
    <string name="kilos">Récord Personal (kg)</string>
    <string name="fecha">Fecha</string>
    <string name="addEjercicios">AÑADIR EJERCICIOS</string>
    <string name="ajustesUsuario">AJUSTES DE USUARIO</string>
    <string name="detallePulsar">Detalle</string>
    <string name="borrarPulsar">Borrar</string>
    <string name="banca">Press Banca</string>
    <string name="sentadilla">Sentadilla</string>
    <string name="frontal">Press Frontal</string>
    <string name="pesoMuerto">Peso Muerto</string>
    <string name="prensa">Prensa</string>
    <string name="remo">Remo en barra</string>
</resources>