<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textRegistro"
        android:layout_width="370dp"
        android:layout_height="33dp"
        android:background="#22025C"
        android:text="@string/textoRegistro"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902" />

    <Button
        android:id="@+id/eBRegistrar"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="156dp"
        android:layout_height="59dp"
        android:text="@string/eBRegistrar"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

    <TextView
        android:id="@+id/txtNombreApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GYMASTER"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/eBIniciarsesion"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="235dp"
        android:layout_height="59dp"
        android:backgroundTint="#F3F3F6"
        android:text="@string/eBIniciarsesion"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:icon="@drawable/gymlogo"
        app:iconGravity="start"
        app:iconSize="40dp"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <Button
        android:id="@+id/eBIniciarsesiongoogle"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="308dp"
        android:layout_height="50dp"
        android:backgroundTint="#52C1F3"
        android:text="@string/eBIniciarsesiongoogle"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:icon="@drawable/google"
        app:iconGravity="start"
        app:iconSize="30dp"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />

    <TextView
        android:id="@+id/textO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="- O -"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edEmail"
        android:layout_width="320dp"
        android:layout_height="69dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/hintEmail"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367"
        app:startIconDrawable="@drawable/ic_usuario"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEdEmail"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:textAlignment="textStart"
            tools:ignore="MissingConstraints" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edPassword"
        android:layout_width="320dp"
        android:layout_height="69dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/hintPassword"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492"
        app:startIconDrawable="@drawable/ic_candado"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEdPassword"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

